tests/good/interpret/034-fact.clap
def fact (x) = if x = 0 then 1 else x * fact (x - 1)
val z = fact 5

