tests/bad/typing/001-int-instead-of-bool.clap
val x = if 42 then 1 else 2

